// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewMessage renders correctly 1`] = `
<KeyboardFriendlyView
  behavior="height"
  keyboardVerticalOffset={64}
>
  <Connect(PeopleChooser)
    addParticipant={[Function]}
    createMessage={[Function]}
    currentUser={
      Object {
        "id": 1,
      }
    }
    participants={
      Array [
        Object {
          "id": 10,
        },
        Object {
          "id": 11,
        },
        Object {
          "id": 12,
        },
      ]
    }
    pending={
      Object {
        "all": false,
        "recent": true,
        "suggestions": true,
      }
    }
    personInputText=""
    recentContacts={
      Array [
        Object {
          "id": 1,
        },
        Object {
          "id": 2,
        },
        Object {
          "id": 3,
        },
      ]
    }
    removeParticipant={[Function]}
    setParticipantInput={[Function]}
    showRecentContacts={true}
    suggestions={
      Array [
        Object {
          "id": 7,
        },
        Object {
          "id": 8,
        },
        Object {
          "id": 9,
        },
      ]
    }
    updatePeople={[Function]}
  />
  <MessageInput
    emptyParticipants={true}
    multiline={true}
    onBlur={[Function]}
    onSubmit={[Function]}
    placeholder="Type your message here"
  />
</KeyboardFriendlyView>
`;

exports[`NewMessage renders correctly 2`] = `
<KeyboardFriendlyView
  behavior="height"
  keyboardVerticalOffset={64}
>
  <Connect(PeopleChooser)
    addParticipant={[Function]}
    createMessage={[Function]}
    currentUser={
      Object {
        "id": 1,
      }
    }
    participants={
      Array [
        Object {
          "id": 10,
        },
        Object {
          "id": 11,
        },
        Object {
          "id": 12,
        },
      ]
    }
    pending={
      Object {
        "all": false,
        "recent": true,
        "suggestions": true,
      }
    }
    personInputText="Jon"
    recentContacts={
      Array [
        Object {
          "id": 1,
        },
        Object {
          "id": 2,
        },
        Object {
          "id": 3,
        },
      ]
    }
    removeParticipant={[Function]}
    setParticipantInput={[Function]}
    showRecentContacts={true}
    suggestions={
      Array [
        Object {
          "id": 7,
        },
        Object {
          "id": 8,
        },
        Object {
          "id": 9,
        },
      ]
    }
    updatePeople={[Function]}
  />
  <MessageInput
    emptyParticipants={true}
    multiline={true}
    onBlur={[Function]}
    onSubmit={[Function]}
    placeholder="Type your message here"
  />
</KeyboardFriendlyView>
`;
